[package]
name = "updater"
version = "0.1.0"
authors = ["Nelio Santos <nsfilho@icloud.com>"]
description = "A simple updater for a service in docker swarm"
license = "MIT"
repository = "https://github.com/nsfilho/update"
edition = "2021"

[dependencies]
axum = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
hostname = "0.4.0"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4.38", features = ["serde"] }
figment = { version = "0.10.19", features = ["env", "json", "toml", "yaml"] }
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["json"] }
serde_path_to_error = "0.1.16"
tower-http = { version = "0.5.2", features = ["timeout", "trace", "cors", "limit"] }
thiserror = "1.0.61"
futures = "0.3.30"
